Perkin-UAT/force-app/main/default/objects/B2B_Product_Shipping__c/B2B_Product_Shipping__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to store the estimated shipping days and location for the product.</description>
    <label>B2B Product Shipping</label>
    <nameField>
        <displayFormat>SHP-{00000}</displayFormat>
        <label>Product Shipping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Product Shippings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>