Perkin-UAT/force-app/main/default/objects/B2B_Product_Shipping__c/fields/B2B_Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>B2B_Estimated_Days__c</fullName>
    <label>Estimated Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>