Perkin-UAT/force-app/main/default/objects/B2B_Product_Shipping__c/fields/B2B_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>