Perkin-UAT/force-app/main/default/objects/B2B_Product_Shipping__c/fields/B2B_Sourcing_DC__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sourcing_DC__c</fullName>
    <label>Sourcing DC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1US6</fullName>
            </value>
            <value>
                <fullName>MXS1</fullName>
            </value>
            <value>
                <fullName>CL11</fullName>
            </value>
            <value>
                <fullName>B2S1</fullName>
            </value>
            <value>
                <fullName>TR11</fullName>
            </value>
            <value>
                <fullName>CN11</fullName>
            </value>
            <value>
                <fullName>TW11</fullName>
            </value>
            <value>
                <fullName>KRS1</fullName>
            </value>
            <value>
                <fullName>SGS2</fullName>
            </value>
            <value>
                <fullName>AUS1</fullName>
            </value>
            <value>
                <fullName>CNS1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>